fix: z-index of template

--- a/scss/objects/_objects.template.scss
+++ b/scss/objects/_objects.template.scss
@@ -3,4 +3,5 @@
     position: absolute;
     width: 100%;
     opacity: 0.6;
+    z-index: -2;
 }
